Changelog
=========

5.1-dev - (unreleased)
----------------------

5.0 - (2012-10-08)
------------------
* Change: use IVideo interface when checking for videos
  [ichimdav #5480]
* Feature: Added a listing of all relations that don't comply portal_relations schema
  [ghicaale refs #3212]
* Bug fix: Fix doc tests
  [voineali]

4.8 - (2012-08-27)
------------------
* Bug fix: correctly set css class for related links to avoid floating issues
  [ichimdav #5455]
* Bug fix: show fancybox popup on video click and display view page instead
  of downloading file
  [ichimdav #5403]
* Feature: Trigger event when updating widget is done
  [szabozo0 refs #5138]

4.7 - (2012-07-13)
------------------
* Bug fix: fixed description error for Sparql related items
  [ichimdav #4705]
* Bug fix: Fixed i18n missing tags and i18n:domain in .pt files
  [prospchr refs #5162]

4.6 - (2012-06-12)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.relations
* Upgrade step: (optional) For each "Plone > portal_relations >
  <Content-Type>" enable 'faceted search' within Actions menu
  [voineali refs #5218]
* Bug fix: Fixed generic relations (all to all relations)
  [voineali fixes #4908]
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* Feature: Use the faceted 'search mode' by default for
  relations content-types in order to speed up the relations popup
  [voineali refs #5218]

4.5 - (2012-03-30)
------------------
* i18n: Added i18n locales folder, pot files and po files for en and ro
  [voineali]
* Change: Update popup look&feel
  [voineali #4968]
* Change: remove left and right column for portal_relations admin page
  [demarant]
* Feature: possibility to overwrite default thumb scale when show relations
  [demarant]
* Bug fix: Fixed view macro under eeareferencebrowser.pt
  [ghicaale #4998]
* Change: removed content creation status message in reference popup
  [tiberich #4982]

4.4 - (2012-03-05)